--- a/webwallet.html
+++ b/webwallet.html
@@ -1,10 +1,10 @@
 
 <html>
   <body>
-    <script src="./node_modules/eth-lightwallet/dist/lightwallet.min.js"></script>
+    <script src="./lightwallet.min.js"></script>
     <script src="https://cdn.rawgit.com/ethereumjs/browser-builds/2fb69a714afe092b06645286f14b94f41e5c062c/dist/ethereumjs-tx.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.36/dist/web3.min.js" integrity="sha256-nWBTbvxhJgjslRyuAKJHK+XcZPlCnmIAAMixz6EefVk=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="./node_modules/async/dist/async.js"></script>
+<script type="text/javascript" src=".async.js"></script>
 <script type="text/javascript" src="./WalletCore.js"></script>
 <script type="text/javascript" src="./WalletInterface.js"></script>
     <h1>LightWallet</h1>
