--- a/webwallet.html
+++ b/webwallet.html
@@ -4,7 +4,7 @@
     <script src="./lightwallet.min.js"></script>
     <script src="https://cdn.rawgit.com/ethereumjs/browser-builds/2fb69a714afe092b06645286f14b94f41e5c062c/dist/ethereumjs-tx.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.36/dist/web3.min.js" integrity="sha256-nWBTbvxhJgjslRyuAKJHK+XcZPlCnmIAAMixz6EefVk=" crossorigin="anonymous"></script>
-<script type="text/javascript" src=".async.js"></script>
+<script type="text/javascript" src="./async.js"></script>
 <script type="text/javascript" src="./WalletCore.js"></script>
 <script type="text/javascript" src="./WalletInterface.js"></script>
     <h1>LightWallet</h1>
@@ -33,12 +33,12 @@
     <div><button onclick="sendEth()">Send Ether</button></div>
 
     <h2>ETH Balance</h2>
-    <div><button onclick="balancecheckERC20()">Show Seed</button></div>
+    <div><button onclick="balancecheckETH()">Show Seed</button></div>
 
     <h2>ERC20 Balance</h2>
     <div>Contract Address: <input type="text" id="contractERC20"></div>
-    <div><button onclick="balancecheckETH()">Show Seed</button></div>
-
+    <div><button onclick="balancecheckERC20()">Show Seed</button></div>
+    
 
 
 </body>
